<resources>
    <string name="app_name">CalculatorCalorii</string>
    <string name="logare">Logare</string>
    <string name="inregistrare">Inregistrare</string>
    <string name="utilizator">Utilizator</string>
    <string name="parola">Parola</string>
    <string name="adauga">Adauga o noua intrare</string>
    <string name="istoric">Vezi istoric</string>
    <string name="data">Data</string>
    <string name="pasi">Numarul de pasi: </string>
    <string name="greutate">Greutatea: </string>
    <string name="Calorii">Calorii arse: </string>
    <string name="confirmare">Confirmare</string>

    <string-array name="days_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="months_array">
        <item>Ianuarie</item>
        <item>Februarie</item>
        <item>Martie</item>
        <item>Aprilie</item>
        <item>Mai</item>
        <item>Iunie</item>
        <item>Iulie</item>
        <item>August</item>
        <item>Septembrie</item>
        <item>Octombrie</item>
        <item>Noiembrie</item>
        <item>Decembrie</item>
    </string-array>

    <string-array name="years_array">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

</resources>